All works to 1/2 video except adding to database

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,13 @@
 <!doctype html>
 <html>
     <head>
-        <title>{{title}}</title>
+        <title>{{titlebase}}</title>
+        <style>
+            .error {
+                color: #FF0000;
+            }
+
+        </style>
     </head>
 <body>
     <p>| <a href="/blog">Main Blog Page</a> | <a href="/newpost">Add a Blog Entry</a> |</p>
