Finished part 1 of build a blog

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,7 +2,7 @@
 
 {% block newpost %}
     <h1>Add A Blog Entry</h1>
-    <form method='post' action="/validate_newpost">
+    <form method='post' action="/blog">
         <table>
         <tr>
                 <td>
