Functioning Build-a-blog

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,6 @@
             .error {
                 color: #FF0000;
             }
-
         </style>
     </head>
 <body>
@@ -19,6 +18,11 @@
 
     {% block newpost %}
     {% endblock %}
+
+    {% block page %}
+    {% endblock %}
+
+
 
 </body>
 </html>
