--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,7 +8,7 @@
     <p>No entrys yet!</p>
     {% else %}
         {% for blog in blogs %}
-        <h2>{{blog.title}}</h2>
+        <a href='/blog?id={{blog.id}}'><h2>{{blog.title}}</h2></a>
         <p>{{blog.body}}</p>
         {% endfor %}
     
