Finally done with Blogz

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,7 +10,10 @@
         {% for blog in blogs %}
         <a href='/blog?id={{blog.id}}'><h2>{{blog.title}}</h2></a>
         <p>{{blog.body}}</p>
+        <h6>Written by: <a href="/blog?user={{blog.owner.username}}">{{blog.owner.username}}</a></h6>
+        <hr>
         {% endfor %}
+        
     
     {% endif %}
 {% endblock %}
