--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -9,7 +9,7 @@
             <label>
                 Title for your Blog:</br>
                 <input type="text" name='title' value='{{title}}'/>
-                <p class="error">{{title_error}}</p>
+                <p>{{title_error}}</p>
             </label>
                 </td>
             <tr>
@@ -17,7 +17,7 @@
                     <label>
                             Your New Blog:</br>
                             <textarea name="body" rows="10" cols="50" value='{{body}}'></textarea>
-                            <p class="error">{{body_error}}</p>
+                            <p>{{body_error}}</p>
                     </label>
                </td>
             </tr>
