--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,59 @@
     <head>
         <title>{{titlebase}}</title>
         <style>
-            .error {
-                color: #FF0000;
+
+            a:link{
+                color:white;
             }
+
+
+            a:visited{
+                color:#FFFFFF;
+            }
+
+            a:hover{
+                color: #A8A8A8
+            }
+
+            body{
+                background-color: black;
+                color: white;
+            }
+
+            .error {
+                color: #A52F2F;
+                text-shadow: 0 0 0.5em rgb(255, 0, 0)
+            }
+
+            .success {
+                color: #47A52F;
+                text-shadow: 0 0 0.5em rgb(72, 255, 0)
+            }
+
+            .right {
+                float: right
+            }
+
+            .left {
+                float: left
+            }
+
+            .clear{
+                clear: both;
+            }
+
         </style>
     </head>
 <body>
-    <p>| <a href="/blog">Main Blog Page</a> | <a href="/newpost">Add a Blog Entry</a> |</p>
-<hr />
+    <div class = 'left'>| <a href="/index"> Home </a> | <a href="/blog">All Posts</a> | <a href='/newpost'>New Post</a> | </div>
+    <div class = 'right'> | <a href='/login'>Login</a> | <a href='/logout'>Logout</a> |</div><br>
+    <hr class = 'clear'/>
+
+{% with messages = get_flashed_messages(with_categories=True) %}
+{% for category, message in messages %}
+<p class = "{{category}}">{{message}}</p>
+{% endfor %}
+{% endwith %}
 
 
     {% block blog %}
@@ -21,6 +66,11 @@
 
     {% block page %}
     {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
+
 
 
 
